# dockpanel

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
dashboards/: dockpanel-grafana.json
docs/: CONFIGURATION.md  SUMMARY.md  api-reference.md  book.toml  cli-reference.md  getting-started.md  troubleshooting.md
docs/guides/: acme-profiles.md  backup-orchestrator.md  backups.md  email.md  git-deploy.md  image-scanning.md  incidents.md  monitoring.md  multi-server.md  notifications.md  prometheus.md  sbom.md  secrets.md  security-hardening.md  sessions.md  status-page.md  themes.md  webhook-gateway.md  wordpress.md
panel/: .env.example  docker-compose.yml
panel/agent/: Cargo.toml  dockpanel-agent.service
panel/agent/src/: main.rs  tls.rs
panel/agent/src/routes/: backup_verify.rs  backups.rs  cms.rs  crons.rs  database.rs  database_backup.rs  deploy.rs  diagnostics.rs  docker_apps.rs  files.rs  git_build.rs  iac.rs  logs.rs  mail.rs  migration.rs  mod.rs  nginx.rs  php.rs  remote_backup.rs  security.rs  server_utils.rs  service_installer.rs  services.rs  smtp.rs  ssl.rs  system.rs  telemetry.rs  terminal.rs  traefik.rs  updates.rs  volume_backup.rs  wordpress.rs
panel/agent/src/services/: app_process.rs  backup_verify.rs  backups.rs  cms.rs  command_filter.rs  compose.rs  database.rs  database_backup.rs  deploy.rs  diagnostics.rs  docker_apps.rs  encryption.rs  files.rs  git_build.rs  image_scanner.rs  logs.rs  migration.rs  mod.rs  nginx.rs  phone_home.rs  remote_backup.rs  sbom_scanner.rs  security.rs  security_scanner.rs  smtp.rs  ssl.rs  staging.rs  traefik.rs  volume_backup.rs  wordpress.rs  wp_vulnerability.rs
panel/agent/src/templates/nginx/: http.conf  https.conf  proxy.conf
panel/backend/: Cargo.toml  Dockerfile
panel/backend/.cargo/: audit.toml
panel/backend/src/: auth.rs  config.rs  error.rs  helpers.rs  main.rs  models.rs
panel/backend/src/routes/: activity.rs  agent_checkin.rs  agent_commands.rs  agent_updates.rs  alerts.rs  api_keys.rs  auth.rs  backup_destinations.rs  backup_orchestrator.rs  backup_schedules.rs  backups.rs  billing.rs  cdn.rs  crons.rs  dashboard.rs  databases.rs  deploy.rs  dns.rs  docker_apps.rs  extensions.rs  files.rs  git_deploys.rs  iac.rs  image_scans.rs  incidents.rs  logs.rs  mail.rs  metrics.rs  migration.rs  mod.rs  monitors.rs  notifications.rs  oauth.rs  passkeys.rs  prometheus.rs  reseller_dashboard.rs  resellers.rs  secrets.rs  security.rs  security_scans.rs  (+16 more)
panel/backend/src/services/: agent.rs  alert_engine.rs  auto_healer.rs  backup_policy_executor.rs  backup_scheduler.rs  deploy_scheduler.rs  email.rs  extensions.rs  image_scanner.rs  metrics_collector.rs  mod.rs  notifications.rs  preview_cleanup.rs  prometheus_exporter.rs  secrets_crypto.rs  security_hardening.rs  security_scanner.rs  server_monitor.rs  telemetry_collector.rs  uptime.rs
panel/cli/: Cargo.toml
panel/cli/src/: client.rs  main.rs
panel/cli/src/commands/: apps.rs  backup.rs  db.rs  iac.rs  php.rs  security.rs  sites.rs  status.rs
panel/frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
panel/frontend/src/: api.ts  constants.ts  index.css  main.tsx
scripts/: deploy-check.sh  docs-audit.sh  install-agent.sh  install.sh  release.sh  setup.sh  uninstall.sh  update.sh
tests/: backup-orchestrator-e2e.sh  deep-e2e.sh  e2e.sh  full-e2e.sh  incident-management-e2e.sh  secrets-manager-e2e.sh  security-enhancements-e2e.sh  tier2-pin-e2e.sh  webhook-gateway-e2e.sh
website/client/: index.html  package-lock.json  package.json
website/server/: package-lock.json  package.json
(+87 files in other folders)
