[package]
name = "dockpanel-agent"
version = "2.7.4"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sysinfo = "0.34"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen"] }
x509-parser = "0.16"
bollard = "0.18"
tokio-stream = "0.1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
sha2 = "0.11"
subtle = "2"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
rustix = { version = "1", features = ["termios", "pty", "fs", "process"] }
libc = "0.2"
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
