[package]
name = "dockpanel"
version = "2.0.3"
edition = "2024"
description = "CLI for DockPanel — self-hosted server management"

[[bin]]
name = "dockpanel"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
